--- a/www/app/components/main/main.html
+++ b/www/app/components/main/main.html
@@ -34,10 +34,10 @@
     </div>
     <md-divider></md-divider>
     <div layout="row" layout-align="space-around center" flex="20">
-      <md-button class="md-icon-button" aria-label="Project" ng-href="https://github.com/marioaleo12/cordova-angular-angularMaterial-seed">
+      <md-button class="md-icon-button" aria-label="Project" ng-href="https://github.com/mario-aleo/cordova-angular-angularMaterial-seed">
         <ng-md-icon icon="github-circle"></ng-md-icon>
       </md-button>
-      <md-button class="md-icon-button" aria-label="Creator" ng-href="https://github.com/marioaleo12">
+      <md-button class="md-icon-button" aria-label="Creator" ng-href="https://github.com/mario-aleo">
         <ng-md-icon icon="favorite"></ng-md-icon>
       </md-button>
     </div>
