--- a/www/app/components/main/main.html
+++ b/www/app/components/main/main.html
@@ -1,20 +1,70 @@
-<section>
-    <paper-card>
+
+    <paper-card ng-click="main.OpenSheet()">
         <div class="card-content">
-            <p>
-                A seed to create an Hybrid App using Cordova, AngularJs and Polymer.
-            </p>
-            <p>
-                This isn't an Ionic Framework Seed.
-            </p>
+            <div class="card-content-row">
+                <p>Personagem:</p><p>Marad</p>
+            </div>
+            <div class="card-content-row">
+                <p>Level:</p><p>100</p>
+            </div>
+            <div class="card-content-row">
+                <p>Classe:</p><p>Paldino</p>
+            </div>
+            <div class="card-content-row">
+                <p>Raça:</p><p>Draenei</p>
+            </div>
+            <div class="card-content-row">
+                <p>Sistema:</p><p>D&D 3.5</p>
+            </div>
         </div>
         <div class="card-actions">
-            <a ng-href="https://github.com/mario-aleo/cordova-angular-polymer-seed">
-                <paper-icon-button icon="favorite"></paper-icon-button>
-            </a>
-            <a ng-href="https://github.com/mario-aleo">
-                <paper-icon-button icon="account-circle"></paper-icon-button>
-            </a>
+            <paper-icon-button class="card-action-icon-button" icon="favorite"></paper-icon-button>
         </div>
     </paper-card>
-</section>
+    
+    <paper-card ng-click="main.OpenSheet()">
+        <div class="card-content">
+            <div class="card-content-row">
+                <p>Personagem:</p><p>Marad</p>
+            </div>
+            <div class="card-content-row">
+                <p>Level:</p><p>100</p>
+            </div>
+            <div class="card-content-row">
+                <p>Classe:</p><p>Paldino</p>
+            </div>
+            <div class="card-content-row">
+                <p>Raça:</p><p>Draenei</p>
+            </div>
+            <div class="card-content-row">
+                <p>Sistema:</p><p>D&D 3.5</p>
+            </div>
+        </div>
+        <div class="card-actions">
+            <paper-icon-button class="card-action-icon-button" icon="favorite"></paper-icon-button>
+        </div>
+    </paper-card>
+    
+    <paper-card ng-click="main.OpenSheet()">
+        <div class="card-content">
+            <div class="card-content-row">
+                <p>Personagem:</p><p>Marad</p>
+            </div>
+            <div class="card-content-row">
+                <p>Level:</p><p>100</p>
+            </div>
+            <div class="card-content-row">
+                <p>Classe:</p><p>Paldino</p>
+            </div>
+            <div class="card-content-row">
+                <p>Raça:</p><p>Draenei</p>
+            </div>
+            <div class="card-content-row">
+                <p>Sistema:</p><p>D&D 3.5</p>
+            </div>
+        </div>
+        <div class="card-actions">
+            <paper-icon-button class="card-action-icon-button" icon="favorite"></paper-icon-button>
+        </div>
+    </paper-card>
+<paper-fab noink icon="add" ng-click="main.CreateSheet()"></paper-fab>
