--- a/www/app/components/sheet-creation/sheet-creation.html
+++ b/www/app/components/sheet-creation/sheet-creation.html
@@ -5,13 +5,24 @@
         <style>
             :host {
                 width: 100%;
-                
                 --paper-tabs-selection-bar-color: #03A9F4;
+                --paper-input-container-focus-color: #03A9F4;
             }
             
             paper-tabs, paper-toolbar {
                 background-color: #9E9E9E;
                 color: #FFFFFF;
+            }
+            
+            .creation-tabs {
+                width: 100%;
+                @apply(--layout-vertical);
+            }
+            
+            .card-container {
+                width: 100%;
+                @apply(--layout-horizontal);
+                @apply(--layout-center-justified);
             }
             
             paper-card {
@@ -20,9 +31,11 @@
             }
             
             .card-content-row {
-                 @apply(--layout-horizontal);
-                 margin-top: -1em;
-                 margin-bottom: -1em;
+                @apply(--layout-horizontal);
+            }
+            
+            paper-input {
+                
             }
         </style>
         
@@ -41,27 +54,37 @@
         </paper-tabs>
 
         <iron-pages selected="{{selected}}">
-            <div>
-                <p>Basico</p>
-                <paper-card on-click="openSheet">
-                    <div class="card-content">
-                        <div class="card-content-row">
-                            <paper-input is="iron-input" bind-value="{{newSheet.name}}" label="Nome"></paper-input>
+            <div class="creation-tabs">
+                <div class="card-container">
+                    <paper-card heading="Básico">
+                        <div class="card-content">
+                            <paper-input-container>
+                                <label>Nome</label>
+                                <input is="iron-input" bind-value="{{newSheet.name}}"> 
+                            </paper-input-container>
+
+                            <paper-input-container>
+                                <label>Classe</label>
+                                <input is="iron-input" bind-value="{{newSheet.class}}"> 
+                            </paper-input-container>
+
+                            <paper-input-container>
+                                <label>Raça</label>
+                                <input is="iron-input" bind-value="{{newSheet.race}}"> 
+                            </paper-input-container>
+
+                            <paper-input-container>
+                                <label>Level</label>
+                                <input is="iron-input" bind-value="{{newSheet.level}}"> 
+                            </paper-input-container>
+
+                            <paper-input-container>
+                                <label>Sistema</label>
+                                <input is="iron-input" bind-value="{{newSheet.system}}"> 
+                            </paper-input-container>
                         </div>
-                        <div class="card-content-row">
-                            <paper-input is="iron-input" bind-value="{{newSheet.class}}" label="Classe"></paper-input>
-                        </div>
-                        <div class="card-content-row">
-                            <paper-input is="iron-input" bind-value="{{newSheet.race}}" label="Raça"></paper-input>
-                        </div>
-                        <div class="card-content-row">
-                            <paper-input is="iron-input" bind-value="{{newSheet.level}}" label="Level"></paper-input>
-                        </div>
-                        <div class="card-content-row">
-                            <paper-input is="iron-input" bind-value="{{newSheet.system}}" label="Sistema"></paper-input>
-                        </div>
-                    </div>
-                </paper-card>
+                    </paper-card>
+                </div>
             </div>
             <div>Status</div>
             <div>Recursos</div>
@@ -129,6 +152,7 @@
                     volatileBonus: {}
                     // *bonusName: { *value: 10, *affect: Vit }, ...  Sample: Potion Bonus 
                 }
+            }
         },
         ready: function(e){
             console.log("Sheet Creation Loaded");
